-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.423 2009-02-21 01:06:50 guru Exp $
-----------------------------------------------------------------------------------------
2009-02-20	pwessel
	* web site:		The script generating the mirror site PNG and hitmap had some
				bugs that prevented a proper hitmap and image.  Now fixed.
-----------------------------------------------------------------------------------------
2009-02-15
	* GMT 4.4.0 finalized and released
-----------------------------------------------------------------------------------------

2009-02-15	pwessel
	* GTM_doc.tar:		Now combines all documentation, tutorials, and examples: No
				more separate _tut, _web, _pdf, _scripts tarballs.
2009-02-15	remko
	* conf/gmtdefaults*.in, gmt_globals.h, gmtdefaults.txt:	Changed default PLOT_DEGREE_FORMAT from
				+ddd:mm:ss to ddd:mm:ss. This produces degrees in range +-180 instead
				of 0 to 360.

2009-02-13	pwessel
	* x2sys/x2sys_init.c:	Failed to set units/method defaults if -G was set and no -C/N specified.
	* x2sys/*.c:		Use =list rather than :list to specify a list with tracks (as in mgd77)
				[but keep processing :list also for backwards compatibility]
	* website/*:		Scripts and makefile modified to deal with new arrangement
				of files in share/doc.  Simplified web site test and update.

2009-02-13	remko
	* share/doc/gmt:	New directory moved from www/gmt
	* share/doc/gmt/{examples,tutorial}:	Directories moved here
	* share/doc/gmt/html/index.html:	Copy of gmt_services.html (for practicality)
	* share/doc/gmt/html/man:	New location for html manpages
	* guru/webman.sh:	Fixed broken links to #anchor in gmtdefaults.html
	* guru/*man.sh:		Moving output to new location: share/doc/html/{man,pdf}
	* guru/*.lis:		Examples, tutorial and manpages in new location
	* doc/GNUmakefile:	No more "make install". Directly puts html and pdf output in new